Resolves: tdf#133744 stop processing if DoubleClickHdl consumed event

Change-Id: I69bb7d670b04b082df294d5ea56dfd6e8d6d4fe7